<resources>
    <string name="app_name">Crypto</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="list_fragment_label">List Fragment</string>
    <string name="detail_fragment_label">Detail Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="string_price_24h">Price 24H : $</string>
    <string name="string_percent_change_24h">Percent Change 24h: $</string>
    <string name="string_market_cap">Market Cap: $ </string>
    <string name="market_cap_asc_string">market cap</string>
    <string name="name_asc_string">name</string>
    <string name="price_asc_string">price</string>
    <string name="sort_by_string">Sort by:</string>
    <string name="filter_by_string">Filter:</string>
    <string name="cryptocurrency_type_string">Cryptocurrency type:</string>
    <string name="file_sharing_string">file sharing</string>
    <string name="defi_string">defi</string>
    <string name="all_default_string">all (default)</string>
    <string name="tokens_string">tokens</string>
    <string name="coins_string">coins</string>
    <string name="tag_string">tag:</string>
    <string name="sort_string">Sort</string>
    <string name="filter_string">Filter</string>
    <string name="no_results">No Results</string>
    <string name="retry">retry</string>
    <string name="Bad_Request_string">Bad Request</string>
    <string name="Unauthorized_string">Unauthorized</string>
    <string name="Payment_Required_string">Payment Required</string>
    <string name="Forbidden_string">Forbidden</string>
    <string name="Too_Many_Requests_string">Too Many Requests</string>
    <string name="Internal_Server_Error_string">Internal Server Error</string>

</resources>